@@ -1,3 +1,7 @@
+2002-05-07  Jason Thorpe  <thorpej@wasabisystems.com>
+
+	* solib.h: Protect against multiple inclusion.
+
 2002-05-06  Jim Blandy  <jimb@redhat.com>
 
 	Separate the job of reading the line number info statement program
